--- a/locale/en-US/extensions2.dtd
+++ b/locale/en-US/extensions2.dtd
@@ -1,2 +1,3 @@
 <!ENTITY cmd.debugAddon.label                 "Debug">
 <!ENTITY cmd.debugAddon.accesskey             "B">
+<!ENTITY setting.learnmore                    "Learn more">
